Fixed amnesty logo being a little bit too small in the topbar

--- a/static/src/styles/common/topbar.sass
+++ b/static/src/styles/common/topbar.sass
@@ -16,7 +16,6 @@
   height: 45px
   margin-right: 20px
   text-indent: -9999px
-  background-size: 47px 47px;
 
 #law-soc-topbar-logo a
   background: url(../../images/logo/law-soc-square-small.jpg) no-repeat center center
@@ -27,6 +26,7 @@
 
 #amnsety-topbar-logo a
   background: url(../../images/logo/amnesty-square-small.png) no-repeat center center
+  background-size: 47px
 
 #svp-topbar-logo a
   background: url(../../images/logo/svp-square-small.png) no-repeat center center
